# Pixora

backend/: .gitignore  Dockerfile  README.md  pyproject.toml  railway.json
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  health.py  history.py  search.py  upload.py
backend/app/chains/: internet_search_chain.py  picture_search_chain.py  prompts.py
backend/app/core/: config.py  logging.py  retry.py  security.py
backend/app/models/: schemas.py
backend/app/services/: history_service.py  pinecone_service.py  rag_service.py  scraper_service.py  vision_service.py  web_search_service.py
backend/app/utils/: firebase.py  image_utils.py
frontend/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/app/: page.tsx
frontend/app/history/: page.tsx
frontend/app/intro/: page.tsx
frontend/app/login/: page.tsx
frontend/components/auth/: AuthCard.tsx  GoogleIcon.tsx  SocialButton.tsx
frontend/components/chat/: ChatInput.tsx  ChatShell.tsx  ModeToggle.tsx  SourceChip.tsx  SuggestedTopics.tsx  TurnCard.tsx
frontend/components/history/: HistoryList.tsx
frontend/components/intro/: BubbleIntro.tsx
frontend/components/layout/: Navbar.tsx  ProtectedRoute.tsx  UserMenu.tsx
frontend/components/mascot/: RabbitMascot.tsx
frontend/components/ui/: Button.tsx
frontend/lib/: api.ts  auth-actions.ts  auth-context.tsx  firebase.ts  types.ts
