[project]
name = "pixora-backend"
version = "0.1.0"
description = "Pixora - Multimodal AI-powered RAG platform backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "langchain>=0.3.7",
    "langchain-core>=0.3.15",
    "langchain-google-genai>=2.0.4",
    "langchain-community>=0.3.5",
    "google-genai>=1.2.0",
    "pinecone>=6.0.0",
    "firebase-admin>=6.5.0",
    "beautifulsoup4>=4.12.3",
    "tavily-python>=0.5.0",
    "tenacity>=9.0.0",
    "pillow>=11.0.0",
    "orjson>=3.10.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.2",
    "black>=24.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]